# jarvis-desktop-assistant

./: .env.example  .gitignore  README.md  RELEASE_CANDIDATE.md  package.json  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/: __init__.py  chat_store.py  desktop.py  desktop_capture.py  desktop_tray.py  main.py
backend/api/: apps_config.py  apps_wizard.py  chat.py  command.py  conversations.py  desktop_api.py  diagnostics.py  documents.py  habits.py  hotkeys.py  models.py  pending_actions.py  settings.py  setup.py  skills.py  study.py  timers.py  voice.py
data/: automations.json
docs/: architecture.md  automation-engine.md  desktop-app.md  development.md  document-memory.md  habit-learning.md  llm-strategy.md  local-pc-test-plan.md  plugin-system.md  portable-desktop.md  roadmap.md  security.md  setup-wizard.md  specialized-skills.md  startup.md  troubleshooting.md  voice-system.md
frontend/: package-lock.json  package.json
scripts/: check_desktop.py  check_environment.py  check_ollama.py  dev_start_linux.sh  dev_start_macos.sh  dev_start_windows.ps1  install_startup.ps1  pull_recommended_model.sh  setup_local_linux.sh  setup_local_macos.sh  setup_local_windows.ps1  setup_ollama_linux.sh  setup_ollama_macos.sh  setup_ollama_windows.ps1  smoke_test.py  start_jarvis_linux.sh  start_jarvis_macos.sh  start_jarvis_windows.ps1
tests/: __init__.py  test_automation_engine.py  test_document_memory.py  test_llm_providers.py  test_permissions.py  test_registry.py  test_router.py  test_schemas.py  test_skills.py  test_workflow_engine.py  test_workflows.py
(+122 files in other folders)
