[project]
name = "jarvis-desktop-assistant"
version = "0.1.0"
description = "Modular AI desktop assistant — control your PC, chat intelligently, execute commands, manage workflows, automations, voice, memory, and extensible skills/plugins."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lugozzi"}
]
keywords = ["desktop", "assistant", "ai", "llm", "voice", "automation", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
]
llm = [
    "openai>=1.35.0",
    "anthropic>=0.30.0",
]
rag = [
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
